feat, fix: lot of new feature & fix bugs
